--- a/src/app/components/forms/inputs/form-checkbox/form-checkbox.component.html
+++ b/src/app/components/forms/inputs/form-checkbox/form-checkbox.component.html
@@ -9,17 +9,18 @@
     class="form-check-input"
     type="checkbox" />
 
-  <ng-container *ngIf="label">
+  @if (label) {
     <label [for]="id" [ngClass]="{ 'text-danger': isInvalid(), 'form-label': !isInvalid() }" class="form-check-label">
       {{ label }}
     </label>
-  </ng-container>
+  }
 </div>
 
-<aw-field-error
-  *ngIf="form"
-  [badRequest]="badRequest"
-  [fieldName]="fieldName"
-  [fieldText]="label"
-  [form]="form"
-  [submitted]="submitted" />
+@if (form) {
+  <aw-field-error
+    [badRequest]="badRequest"
+    [fieldName]="fieldName"
+    [fieldText]="label"
+    [form]="form"
+    [submitted]="submitted" />
+}
