--- a/src/app/components/forms/inputs/form-switch/form-switch.component.html
+++ b/src/app/components/forms/inputs/form-switch/form-switch.component.html
@@ -11,18 +11,18 @@
     role="switch"
     type="checkbox" />
 
-  <ng-container *ngIf="label">
+  @if (label) {
     <label [for]="id" class="form-check-label">
       {{ label }}
     </label>
-  </ng-container>
+  }
 
-  <ng-container *ngIf="form">
+  @if (form) {
     <aw-field-error
       [badRequest]="badRequest"
       [fieldName]="fieldName"
       [fieldText]="label"
       [form]="form"
       [submitted]="submitted" />
-  </ng-container>
+  }
 </div>
