--- a/src/app/components/pagination/pagination.component.html
+++ b/src/app/components/pagination/pagination.component.html
@@ -1,25 +1,25 @@
 <nav aria-label="Pagination">
   <ul class="pagination">
     <!-- pagination list -->
-    <ng-container *ngIf="showPageList">
+    @if (showPageList) {
       <li class="me-2">
         <select
           (ngModelChange)="handleChangePageListNumber($event)"
           [(ngModel)]="apiResult.pageSize"
           class="form-select unfocus">
-          <ng-container *ngFor="let item of itemsPageList">
+          @for (item of itemsPageList; track item) {
             <option [ngClass]="{ active: item === apiResult.pageSize }" [ngValue]="item">
               {{ item }}
             </option>
-          </ng-container>
+          }
         </select>
       </li>
-    </ng-container>
+    }
     <!-- end pagination list -->
 
-    <ng-container *ngIf="apiResult.totalPages > 1">
+    @if (apiResult.totalPages > 1) {
       <!-- first page -->
-      <ng-container *ngIf="!apiResult.hasPreviousPage">
+      @if (!apiResult.hasPreviousPage) {
         <li class="page-item disabled">
           <a aria-label="Previous" class="page-link" href="#">
             <span aria-hidden="true">
@@ -28,9 +28,8 @@
             <span class="sr-only">Previous</span>
           </a>
         </li>
-      </ng-container>
-
-      <ng-container *ngIf="apiResult.hasPreviousPage">
+      }
+      @if (apiResult.hasPreviousPage) {
         <li [tooltip]="'common.first'" class="page-item">
           <a (click)="handleChangePage(1)" aria-label="Previous" class="page-link cursor-pointer">
             <span aria-hidden="true">
@@ -39,11 +38,10 @@
             <span class="sr-only">Previous</span>
           </a>
         </li>
-      </ng-container>
+      }
       <!-- end first page -->
-
       <!-- previous page -->
-      <ng-container *ngIf="!apiResult.hasPreviousPage">
+      @if (!apiResult.hasPreviousPage) {
         <li class="page-item disabled me-2">
           <a aria-label="Previous" class="page-link" href="#">
             <span aria-hidden="true">
@@ -52,9 +50,8 @@
             <span class="sr-only">Previous</span>
           </a>
         </li>
-      </ng-container>
-
-      <ng-container *ngIf="apiResult.hasPreviousPage">
+      }
+      @if (apiResult.hasPreviousPage) {
         <li [tooltip]="'common.previous'" class="page-item me-2">
           <a
             (click)="handleChangePage(apiResult.pageNumber - 1)"
@@ -66,24 +63,24 @@
             <span class="sr-only">Previous</span>
           </a>
         </li>
-      </ng-container>
+      }
       <!-- end previous page -->
-
       <!-- pages -->
-      <ng-container *ngIf="showPagesButtons">
-        <li *ngFor="let item of pageRange()" [ngClass]="{ active: item === apiResult.pageNumber }" class="page-item">
-          <a
-            (click)="handleChangePage(item)"
-            [ngClass]="{ 'cursor-pointer': item !== apiResult.pageNumber }"
-            class="page-link">
-            {{ item }}
-          </a>
-        </li>
-      </ng-container>
+      @if (showPagesButtons) {
+        @for (item of pageRange(); track item) {
+          <li [ngClass]="{ active: item === apiResult.pageNumber }" class="page-item">
+            <a
+              (click)="handleChangePage(item)"
+              [ngClass]="{ 'cursor-pointer': item !== apiResult.pageNumber }"
+              class="page-link">
+              {{ item }}
+            </a>
+          </li>
+        }
+      }
       <!-- end pages -->
-
       <!-- next page -->
-      <ng-container *ngIf="!apiResult.hasNextPage">
+      @if (!apiResult.hasNextPage) {
         <li class="page-item disabled ms-2">
           <a aria-label="Previous" class="page-link" href="#">
             <span aria-hidden="true">
@@ -92,9 +89,8 @@
             <span class="sr-only">Previous</span>
           </a>
         </li>
-      </ng-container>
-
-      <ng-container *ngIf="apiResult.hasNextPage">
+      }
+      @if (apiResult.hasNextPage) {
         <li [tooltip]="'common.next'" class="page-item ms-2">
           <a (click)="handleChangePage(apiResult.pageNumber + 1)" aria-label="Next" class="page-link cursor-pointer">
             <span aria-hidden="true">
@@ -103,11 +99,10 @@
             <span class="sr-only">Next</span>
           </a>
         </li>
-      </ng-container>
+      }
       <!-- end next page -->
-
       <!-- last page -->
-      <ng-container *ngIf="!apiResult.hasNextPage">
+      @if (!apiResult.hasNextPage) {
         <li class="page-item disabled">
           <a aria-label="Next" class="page-link" href="#">
             <span aria-hidden="true">
@@ -116,9 +111,8 @@
             <span class="sr-only">Next</span>
           </a>
         </li>
-      </ng-container>
-
-      <ng-container *ngIf="apiResult.hasNextPage">
+      }
+      @if (apiResult.hasNextPage) {
         <li [tooltip]="'common.last'" class="page-item">
           <a (click)="handleChangePage(apiResult.totalPages)" aria-label="Next" class="page-link cursor-pointer">
             <span aria-hidden="true">
@@ -127,8 +121,8 @@
             <span class="sr-only">Next</span>
           </a>
         </li>
-      </ng-container>
+      }
       <!-- end last page -->
-    </ng-container>
+    }
   </ul>
 </nav>
