--- a/src/app/components/tables/table-loading/table-loading.component.html
+++ b/src/app/components/tables/table-loading/table-loading.component.html
@@ -1,9 +1,9 @@
 <!-- spinner -->
-<ng-container *ngIf="loading">
+@if (loading) {
   <tr>
     <td class="text-center" colspan="100%">
       <aw-spinner [loading]="loading" [size]="100" />
     </td>
   </tr>
-</ng-container>
+}
 <!-- end spinner -->
