--- a/src/app/views/accounts/recovery-password-change/recovery-password-change.component.html
+++ b/src/app/views/accounts/recovery-password-change/recovery-password-change.component.html
@@ -7,9 +7,9 @@
 
         <aw-non-field-errors [badRequest]="badRequest" />
 
-        <ng-container *ngIf="errorMessages.length > 0">
+        @if (errorMessages.length > 0) {
           <div class="alert alert-danger">Se ha producido un error al restablecer la contraseña</div>
-        </ng-container>
+        }
 
         <!-- password -->
         <div class="mb-2">
