--- a/src/app/views/accounts/recovery-password/recovery-password.component.html
+++ b/src/app/views/accounts/recovery-password/recovery-password.component.html
@@ -7,11 +7,11 @@
 
         <aw-non-field-errors [badRequest]="badRequest" />
 
-        <ng-container *ngIf="hasResponse">
+        @if (hasResponse) {
           <div class="alert alert-success">
             Se ha enviado un correo para restablecer la contraseña. Siga las indicaciones desde su correo.
           </div>
-        </ng-container>
+        }
 
         <!-- email -->
         <div class="mb-2">
