--- a/src/app/views/company-tasks/company-task-create/company-task-create.component.html
+++ b/src/app/views/company-tasks/company-task-create/company-task-create.component.html
@@ -6,14 +6,14 @@
     <form (ngSubmit)="handleSubmit()" [formGroup]="form">
       <aw-non-field-errors [badRequest]="badRequest" />
 
-      <ng-container *ngIf="form.get('name')?.value">
+      @if (form.get('name')?.value) {
         <div class="my-3">
           <aw-badge
             [background]="form.get('background')?.value"
             [color]="form.get('color')?.value"
-            [name]="form.get('name')?.value"></aw-badge>
+          [name]="form.get('name')?.value"></aw-badge>
         </div>
-      </ng-container>
+      }
 
       <!-- name -->
       <div class="mb-2">
