--- a/src/app/views/company-tasks/company-task-list/company-task-list.component.html
+++ b/src/app/views/company-tasks/company-task-list/company-task-list.component.html
@@ -26,33 +26,38 @@
           (clickOrdering)="handleReloadData()"
           [apiResult]="apiResult"
           [tableHeaderConfig]="tableHeaderConfig"
-          awTableHeader></tr>
+        awTableHeader></tr>
       </thead>
 
-      <tbody *ngIf="apiResult" awTbody>
-        <tr (click)="handleSelectItem(task)" *ngFor="let task of apiResult.items" class="cursor-pointer">
-          <td>
-            <aw-badge [background]="task.background" [color]="task.color" [name]="task.name"></aw-badge>
-          </td>
-          <td>{{ task.created | datetime: dateShort }}</td>
-          <td [innerHTML]="task.active | boolToIcon"></td>
-          <td>
-            <aw-dot [color]="task.background"></aw-dot>
-          </td>
-          <td>
-            <aw-dot [color]="task.color"></aw-dot>
-          </td>
-        </tr>
-      </tbody>
+      @if (apiResult) {
+        <tbody awTbody>
+          @for (task of apiResult.items; track task) {
+            <tr (click)="handleSelectItem(task)" class="cursor-pointer">
+              <td>
+                <aw-badge [background]="task.background" [color]="task.color" [name]="task.name"></aw-badge>
+              </td>
+              <td>{{ task.created | datetime: dateShort }}</td>
+              <td [innerHTML]="task.active | boolToIcon"></td>
+              <td>
+                <aw-dot [color]="task.background"></aw-dot>
+              </td>
+              <td>
+                <aw-dot [color]="task.color"></aw-dot>
+              </td>
+            </tr>
+          }
+        </tbody>
+      }
     </aw-table>
     <!-- end table -->
 
     <!-- pagination -->
-    <aw-pagination
-      (changePage)="handleReloadData()"
-      (changePageListNumber)="handleReloadData()"
-      *ngIf="apiResult"
-      [apiResult]="apiResult" />
+    @if (apiResult) {
+      <aw-pagination
+        (changePage)="handleReloadData()"
+        (changePageListNumber)="handleReloadData()"
+        [apiResult]="apiResult" />
+    }
     <!-- end pagination -->
   </aw-card>
 </aw-view-base>
