--- a/src/app/views/employees/employee-list/employee-list.component.html
+++ b/src/app/views/employees/employee-list/employee-list.component.html
@@ -26,27 +26,32 @@
           (clickOrdering)="handleReloadData()"
           [apiResult]="apiResult"
           [tableHeaderConfig]="tableHeaderConfig"
-          awTableHeader></tr>
+        awTableHeader></tr>
       </thead>
 
-      <tbody *ngIf="apiResult" awTbody>
-        <tr (click)="handleSelectItem(employee)" *ngFor="let employee of apiResult.items" class="cursor-pointer">
-          <td>{{ employee.firstName }}</td>
-          <td>{{ employee.lastName }}</td>
-          <td>{{ employee.email }}</td>
-          <td [innerHTML]="employee.active | boolToIcon"></td>
-          <td [innerHTML]="employee.emailConfirmed | boolToIcon"></td>
-        </tr>
-      </tbody>
+      @if (apiResult) {
+        <tbody awTbody>
+          @for (employee of apiResult.items; track employee) {
+            <tr (click)="handleSelectItem(employee)" class="cursor-pointer">
+              <td>{{ employee.firstName }}</td>
+              <td>{{ employee.lastName }}</td>
+              <td>{{ employee.email }}</td>
+              <td [innerHTML]="employee.active | boolToIcon"></td>
+              <td [innerHTML]="employee.emailConfirmed | boolToIcon"></td>
+            </tr>
+          }
+        </tbody>
+      }
     </aw-table>
     <!-- end table -->
 
     <!-- pagination -->
-    <aw-pagination
-      (changePage)="handleReloadData()"
-      (changePageListNumber)="handleReloadData()"
-      *ngIf="apiResult"
-      [apiResult]="apiResult" />
+    @if (apiResult) {
+      <aw-pagination
+        (changePage)="handleReloadData()"
+        (changePageListNumber)="handleReloadData()"
+        [apiResult]="apiResult" />
+    }
     <!-- end pagination -->
   </aw-card>
 </aw-view-base>
