--- a/src/app/views/time-control-records/time-control-record-list/time-control-record-list.component.html
+++ b/src/app/views/time-control-records/time-control-record-list/time-control-record-list.component.html
@@ -26,87 +26,89 @@
           (clickOrdering)="handleReloadData()"
           [apiResult]="apiResult"
           [tableHeaderConfig]="tableHeaderConfig"
-          awTableHeader></tr>
+        awTableHeader></tr>
       </thead>
 
-      <tbody *ngIf="apiResult" awTbody>
-        <tr *ngFor="let timeControl of apiResult.items">
-          <td>{{ timeControl.firstName }}</td>
-          <td>{{ timeControl.lastName }}</td>
-          <td>
-            <span [innerHTML]="timeControl.deviceTypeStart | deviceType"></span>
-            {{ timeControl.start | datetime }}
-
-            <ng-container *ngIf="getStartOpenStreetMapLink(timeControl)">
-              <a [href]="getStartOpenStreetMapLink(timeControl)" target="_blank">
-                <span awTooltip class="fa-solid fa-location-pin text-success" title="Ver en mapa"></span>
-              </a>
-            </ng-container>
-          </td>
-          <td>
-            <ng-container *ngIf="timeControl.timeState === timeState.open">
-              <span [innerHTML]="timeControl.deviceTypeFinish | deviceType"></span>
-            </ng-container>
-
-            <ng-container *ngIf="timeControl.timeState === timeState.close">
-              {{ timeControl.finish | datetime }}
-
-              <ng-container *ngIf="getFinishOpenStreetMapLink(timeControl)">
-                <a [href]="getFinishOpenStreetMapLink(timeControl)" target="_blank">
-                  <span awTooltip class="fa-solid fa-location-pin text-success" title="Ver en mapa"></span>
-                </a>
-              </ng-container>
-            </ng-container>
-          </td>
-          <td>
-            <ng-container *ngIf="timeControl.closedBy === closedBy.staff || timeControl.closedBy === closedBy.system">
-              <span class="fa-solid fa-exclamation text-danger"></span>
-            </ng-container>
-            {{ timeControl.closedBy | closedBy }}
-          </td>
-          <td>
-            <ng-container *ngIf="timeControl.timeState === timeState.open">
-              <aw-dot-success />
-            </ng-container>
-
-            <ng-container *ngIf="timeControl.timeState === timeState.close">
-              <aw-dot-danger />
-            </ng-container>
-          </td>
-          <td>
-            <ng-container *ngIf="timeControl.duration > 1">
-              {{ timeControl.duration | durationToTime }}
-            </ng-container>
-
-            <ng-container *ngIf="timeControl.duration === 0"> -</ng-container>
-          </td>
-          <td>
-            <ng-container *ngIf="timeControl.timeState === timeState.close">
-              <span
-                (click)="handleTimeControlModalEdit(timeControl)"
-                awTooltip
-                class="fa-solid fa-pencil cursor-pointer"
-                title="Editar"></span>
-            </ng-container>
-            <ng-container *ngIf="timeControl.timeState === timeState.open">
-              <span
-                (click)="handleCloseTimeControl(timeControl)"
-                awTooltip
-                class="fa-regular fa-circle-xmark cursor-pointer text-danger"
-                title="Cerrar"></span>
-            </ng-container>
-          </td>
-        </tr>
-      </tbody>
+      @if (apiResult) {
+        <tbody awTbody>
+          @for (timeControl of apiResult.items; track timeControl) {
+            <tr>
+              <td>{{ timeControl.firstName }}</td>
+              <td>{{ timeControl.lastName }}</td>
+              <td>
+                <span [innerHTML]="timeControl.deviceTypeStart | deviceType"></span>
+                {{ timeControl.start | datetime }}
+                @if (getStartOpenStreetMapLink(timeControl)) {
+                  <a [href]="getStartOpenStreetMapLink(timeControl)" target="_blank">
+                    <span awTooltip class="fa-solid fa-location-pin text-success" title="Ver en mapa"></span>
+                  </a>
+                }
+              </td>
+              <td>
+                @if (timeControl.timeState === timeState.open) {
+                  <span [innerHTML]="timeControl.deviceTypeFinish | deviceType"></span>
+                }
+                @if (timeControl.timeState === timeState.close) {
+                  {{ timeControl.finish | datetime }}
+                  @if (getFinishOpenStreetMapLink(timeControl)) {
+                    <a [href]="getFinishOpenStreetMapLink(timeControl)" target="_blank">
+                      <span awTooltip class="fa-solid fa-location-pin text-success" title="Ver en mapa"></span>
+                    </a>
+                  }
+                }
+              </td>
+              <td>
+                @if (timeControl.closedBy === closedBy.staff || timeControl.closedBy === closedBy.system) {
+                  <span class="fa-solid fa-exclamation text-danger"></span>
+                }
+                {{ timeControl.closedBy | closedBy }}
+              </td>
+              <td>
+                @if (timeControl.timeState === timeState.open) {
+                  <aw-dot-success />
+                }
+                @if (timeControl.timeState === timeState.close) {
+                  <aw-dot-danger />
+                }
+              </td>
+              <td>
+                @if (timeControl.duration > 1) {
+                  {{ timeControl.duration | durationToTime }}
+                }
+                @if (timeControl.duration === 0) {
+                  -
+                }
+              </td>
+              <td>
+                @if (timeControl.timeState === timeState.close) {
+                  <span
+                    (click)="handleTimeControlModalEdit(timeControl)"
+                    awTooltip
+                    class="fa-solid fa-pencil cursor-pointer"
+                  title="Editar"></span>
+                }
+                @if (timeControl.timeState === timeState.open) {
+                  <span
+                    (click)="handleCloseTimeControl(timeControl)"
+                    awTooltip
+                    class="fa-regular fa-circle-xmark cursor-pointer text-danger"
+                  title="Cerrar"></span>
+                }
+              </td>
+            </tr>
+          }
+        </tbody>
+      }
     </aw-table>
     <!-- end table -->
 
     <!-- pagination -->
-    <aw-pagination
-      (changePage)="handleReloadData()"
-      (changePageListNumber)="handleReloadData()"
-      *ngIf="apiResult"
-      [apiResult]="apiResult" />
+    @if (apiResult) {
+      <aw-pagination
+        (changePage)="handleReloadData()"
+        (changePageListNumber)="handleReloadData()"
+        [apiResult]="apiResult" />
+    }
     <!-- end pagination -->
   </aw-card>
 </aw-view-base>
