--- a/src/app/components/forms/errors/field-error/field-error.component.html
+++ b/src/app/components/forms/errors/field-error/field-error.component.html
@@ -1,41 +1,38 @@
-<ng-container *ngIf="(submitted && formHasErrors()) || controlHasErrors() || getBadRequestErrors()">
+@if ((submitted && formHasErrors()) || controlHasErrors() || getBadRequestErrors()) {
   <div class="small text-danger mt-1 pl-1">
     <!-- Errores Angular. -->
-    <span [ngSwitch]="true">
-      <ng-container *ngSwitchCase="getControlErrorByErrorName('required')">
+    <span>
+      @if (getControlErrorByErrorName("required")) {
         <div>Campo requerido.</div>
-      </ng-container>
+      }
 
-      <ng-container *ngSwitchCase="getControlErrorByErrorName('email')">
+      @if (getControlErrorByErrorName("email")) {
         <div>Campo email no valido.</div>
-      </ng-container>
+      }
 
-      <ng-container *ngSwitchCase="getControlErrorByErrorName('noPasswordMatch')">
+      @if (getControlErrorByErrorName("noPasswordMatch")) {
         <div>Las contraseñas no coinciden.</div>
-      </ng-container>
+      }
 
-      <ng-container *ngSwitchCase="getControlErrorByErrorName('startGreaterThanFinish')">
+      @if (getControlErrorByErrorName("startGreaterThanFinish")) {
         <div>La fecha de inicio no puede ser mayor a la fecha final.</div>
-      </ng-container>
+      }
 
-      <ng-container *ngSwitchCase="getControlErrorByErrorName('startTimeGreaterThanFinish')">
+      @if (getControlErrorByErrorName("startTimeGreaterThanFinish")) {
         <div>La fecha/hora parecen menor a la de inicio.</div>
-      </ng-container>
+      }
 
-      <ng-container *ngSwitchCase="getControlErrorByErrorName('noFutureDate')">
+      @if (getControlErrorByErrorName("noFutureDate")) {
         <div>No fechas futuras.</div>
-      </ng-container>
-
-      <ng-container *ngSwitchDefault>
-        <div></div>
-      </ng-container>
+      }
     </span>
-
     <!-- Errores obtenidos del backend pertenecientes al campo concreto. -->
-    <ng-container *ngIf="getBadRequestErrors()">
+    @if (getBadRequestErrors()) {
       <div>
-        <div *ngFor="let error of getBadRequestErrors()">{{ error }}</div>
+        @for (error of getBadRequestErrors(); track error) {
+          <div>{{ error }}</div>
+        }
       </div>
-    </ng-container>
+    }
   </div>
-</ng-container>
+}
