--- a/src/app/components/forms/errors/non-field-errors/non-field-errors.component.html
+++ b/src/app/components/forms/errors/non-field-errors/non-field-errors.component.html
@@ -1,9 +1,11 @@
-<ng-container *ngIf="hasErrors">
+@if (hasErrors) {
   <div class="alert alert-danger pb-0">
     <ul>
-      <li *ngFor="let error of getErrors()">
-        {{ error }}
-      </li>
+      @for (error of getErrors(); track error) {
+        <li>
+          {{ error }}
+        </li>
+      }
     </ul>
   </div>
-</ng-container>
+}
