--- a/src/app/components/forms/inputs/form-textarea/form-textarea.component.html
+++ b/src/app/components/forms/inputs/form-textarea/form-textarea.component.html
@@ -1,9 +1,9 @@
 <div class="form-group">
-  <ng-container *ngIf="label">
+  @if (label) {
     <label [for]="id" class="form-label">
       {{ label }}
     </label>
-  </ng-container>
+  }
 
   <textarea
     (ngModelChange)="onChangeValue($event)"
@@ -15,14 +15,14 @@
     [placeholder]="placeholder"
     [rows]="rows"
     [value]="value"
-    class="form-control"></textarea>
+  class="form-control"></textarea>
 
-  <ng-container *ngIf="form">
+  @if (form) {
     <aw-field-error
       [badRequest]="badRequest"
       [fieldName]="fieldName"
       [fieldText]="label"
       [form]="form"
       [submitted]="submitted" />
-  </ng-container>
+  }
 </div>
