--- a/src/app/components/forms/inputs/form-timepicker/form-timepicker.component.html
+++ b/src/app/components/forms/inputs/form-timepicker/form-timepicker.component.html
@@ -1,9 +1,9 @@
 <div class="form-group">
-  <ng-container *ngIf="label">
+  @if (label) {
     <label [for]="id" class="form-label">
       {{ label }}
     </label>
-  </ng-container>
+  }
 
   <timepicker
     (ngModelChange)="onChangeValue($event)"
@@ -13,12 +13,12 @@
     [showMeridian]="showMeridian"
     [ngClass]="{ extraCss: true, 'is-invalid': isInvalid() }" />
 
-  <ng-container *ngIf="form">
+  @if (form) {
     <aw-field-error
       [badRequest]="badRequest"
       [fieldName]="fieldName"
       [fieldText]="label"
       [form]="form"
       [submitted]="submitted" />
-  </ng-container>
+  }
 </div>
