--- a/src/app/components/progress/progress-stacked/progress-stacked.component.html
+++ b/src/app/components/progress/progress-stacked/progress-stacked.component.html
@@ -1,21 +1,22 @@
-<ng-container *ngIf="progressStackedCollection.title">
+@if (progressStackedCollection.title) {
   <div class="text-muted small ms-1">{{ progressStackedCollection.title }}</div>
-</ng-container>
+}
 
 <div class="progress-stacked mb-2">
-  <div
-    *ngFor="let item of progressStackedCollection.progressStackedItems"
-    [attr.aria-valuemax]="item.valueMax"
-    [attr.aria-valuemin]="item.valueMin"
-    [attr.aria-valuenow]="item.valueNow"
-    [ngStyle]="{ width: item.percent + '%' }"
-    aria-label="Segment one"
-    class="progress"
-    role="progressbar">
-    <div [ngClass]="item.background" [title]="item.tooltip" awTooltip class="progress-bar">
-      {{ item.content }}
+  @for (item of progressStackedCollection.progressStackedItems; track item) {
+    <div
+      [attr.aria-valuemax]="item.valueMax"
+      [attr.aria-valuemin]="item.valueMin"
+      [attr.aria-valuenow]="item.valueNow"
+      [ngStyle]="{ width: item.percent + '%' }"
+      aria-label="Segment one"
+      class="progress"
+      role="progressbar">
+      <div [ngClass]="item.background" [title]="item.tooltip" awTooltip class="progress-bar">
+        {{ item.content }}
+      </div>
     </div>
-  </div>
+  }
 
   <ng-content select="[awDescription]" />
 </div>
