--- a/src/app/components/spinner/spinner.component.html
+++ b/src/app/components/spinner/spinner.component.html
@@ -1,13 +1,11 @@
-<ng-container *ngIf="loading">
+@if (loading) {
   <div [ngClass]="justify" class="d-flex">
     <div [ngClass]="[color, extraCss]" [style]="style" class="spinner-border" role="status">
       <span class="sr-only">Loading...</span>
     </div>
-
-    <ng-container *ngIf="text">
+    @if (text) {
       <span class="ml-2">&nbsp;{{ text }}</span>
-    </ng-container>
-
+    }
     <ng-content />
   </div>
-</ng-container>
+}
