--- a/src/app/views/company-tasks/company-task-edit/company-task-edit.component.html
+++ b/src/app/views/company-tasks/company-task-edit/company-task-edit.component.html
@@ -3,19 +3,17 @@
 
   <aw-card>
     <!-- form -->
-    <ng-container *ngIf="companyTask">
+    @if (companyTask) {
       <form (ngSubmit)="handleSubmit()" [formGroup]="form">
         <aw-non-field-errors [badRequest]="badRequest" />
-
-        <ng-container *ngIf="form.get('name')?.value">
+        @if (form.get('name')?.value) {
           <div class="my-3">
             <aw-badge
               [background]="form.get('background')?.value"
               [color]="form.get('color')?.value"
-              [name]="form.get('name')?.value"></aw-badge>
+            [name]="form.get('name')?.value"></aw-badge>
           </div>
-        </ng-container>
-
+        }
         <!-- name -->
         <div class="mb-2">
           <aw-form-input
@@ -27,7 +25,6 @@
             label="Nombre" />
         </div>
         <!-- end name -->
-
         <!-- active -->
         <div class="mb-2">
           <aw-form-checkbox
@@ -39,7 +36,6 @@
             label="Activo" />
         </div>
         <!-- end active -->
-
         <div class="d-flex">
           <!-- background -->
           <div class="mb-2">
@@ -52,7 +48,6 @@
               label="Color de fondo" />
           </div>
           <!-- end background -->
-
           <!-- color -->
           <div class="mb-2 ms-5">
             <aw-form-color
@@ -65,9 +60,7 @@
           </div>
           <!-- end color -->
         </div>
-
         <aw-btn-back cssClass="btn btn-primary mt-2" />
-
         <aw-btn-loading
           [loading]="loadingForm"
           btnClass="btn btn-success mt-2 ms-2"
@@ -75,7 +68,7 @@
           btnText="Guardar"
           spinnerLoadingText="Guardando" />
       </form>
-    </ng-container>
+    }
     <!-- end form -->
   </aw-card>
 </aw-view-base>
