--- a/src/app/views/company-tasks/company-task-view/company-task-users/company-task-users.component.html
+++ b/src/app/views/company-tasks/company-task-view/company-task-users/company-task-users.component.html
@@ -26,23 +26,28 @@
       (clickOrdering)="handleReloadData()"
       [apiResult]="apiResult"
       [tableHeaderConfig]="tableHeaderConfig"
-      awTableHeader></tr>
+    awTableHeader></tr>
   </thead>
 
-  <tbody *ngIf="apiResult" awTbody>
-    <tr (click)="handleSelectItem(user)" *ngFor="let user of apiResult.items" class="cursor-pointer">
-      <td>{{ user.firstName }}</td>
-      <td>{{ user.lastName }}</td>
-      <td>{{ user.email }}</td>
-    </tr>
-  </tbody>
+  @if (apiResult) {
+    <tbody awTbody>
+      @for (user of apiResult.items; track user) {
+        <tr (click)="handleSelectItem(user)" class="cursor-pointer">
+          <td>{{ user.firstName }}</td>
+          <td>{{ user.lastName }}</td>
+          <td>{{ user.email }}</td>
+        </tr>
+      }
+    </tbody>
+  }
 </aw-table>
 <!-- end table -->
 
 <!-- pagination -->
-<aw-pagination
-  (changePage)="handleReloadData()"
-  (changePageListNumber)="handleReloadData()"
-  *ngIf="apiResult"
-  [apiResult]="apiResult" />
+@if (apiResult) {
+  <aw-pagination
+    (changePage)="handleReloadData()"
+    (changePageListNumber)="handleReloadData()"
+    [apiResult]="apiResult" />
+}
 <!-- end pagination -->
