--- a/src/app/views/departments/department-view/department-add-users/department-add-users.component.html
+++ b/src/app/views/departments/department-view/department-add-users/department-add-users.component.html
@@ -8,9 +8,9 @@
   </button>
 </div>
 
-<ng-container *ngIf="htmlItemSelector.length">
+@if (htmlItemSelector.length) {
   <aw-dual-list-box
     (saveChanges)="handleSaveChanges($event)"
     [htmlItemSelector]="htmlItemSelector"
     [loading]="loading" />
-</ng-container>
+}
