--- a/src/app/views/employees/employee-view/employee-tasks/employee-tasks.component.html
+++ b/src/app/views/employees/employee-view/employee-tasks/employee-tasks.component.html
@@ -23,24 +23,29 @@
       (clickOrdering)="handleReloadData()"
       [apiResult]="apiResult"
       [tableHeaderConfig]="tableHeaderConfig"
-      awTableHeader></tr>
+    awTableHeader></tr>
   </thead>
 
-  <tbody *ngIf="apiResult" awTbody>
-    <tr (click)="handleSelectItem(task)" *ngFor="let task of apiResult.items" class="cursor-pointer">
-      <td>
-        <aw-badge [background]="task.background" [color]="task.color" [name]="task.name" />
-      </td>
-      <td [innerHTML]="task.active | boolToIcon"></td>
-    </tr>
-  </tbody>
+  @if (apiResult) {
+    <tbody awTbody>
+      @for (task of apiResult.items; track task) {
+        <tr (click)="handleSelectItem(task)" class="cursor-pointer">
+          <td>
+            <aw-badge [background]="task.background" [color]="task.color" [name]="task.name" />
+          </td>
+          <td [innerHTML]="task.active | boolToIcon"></td>
+        </tr>
+      }
+    </tbody>
+  }
 </aw-table>
 <!-- end table -->
 
 <!-- pagination -->
-<aw-pagination
-  (changePage)="handleReloadData()"
-  (changePageListNumber)="handleReloadData()"
-  *ngIf="apiResult"
-  [apiResult]="apiResult" />
+@if (apiResult) {
+  <aw-pagination
+    (changePage)="handleReloadData()"
+    (changePageListNumber)="handleReloadData()"
+    [apiResult]="apiResult" />
+}
 <!-- end pagination -->
