--- a/src/app/views/employees/employee-view/employee-view.component.html
+++ b/src/app/views/employees/employee-view/employee-view.component.html
@@ -1,25 +1,25 @@
 <aw-view-base>
   <!-- header -->
   <aw-view-header [breadcrumb]="breadcrumb">
-    <ng-container *ngIf="employeeTimeControlState()?.timeState === timeStates.open">
+    @if (employeeTimeControlState()?.timeState === timeStates.open) {
       <aw-dot-success />
-    </ng-container>
-    <ng-container *ngIf="employeeTimeControlState()?.timeState === timeStates.close">
+    }
+    @if (employeeTimeControlState()?.timeState === timeStates.close) {
       <aw-dot-danger />
-    </ng-container>
+    }
 
     Empleado - <span awHeaderSubtitle>{{ employeeSelected()?.firstName }} {{ employeeSelected()?.lastName }}</span>
   </aw-view-header>
   <!-- end header -->
 
   <!-- employee details -->
-  <ng-container *ngIf="employeeSelected()">
+  @if (employeeSelected()) {
     <aw-employee-details />
-  </ng-container>
+  }
   <!-- end employee details -->
 
   <!-- tabs -->
-  <ng-container *ngIf="employeeSelected()">
+  @if (employeeSelected()) {
     <div class="mt-3">
       <aw-card>
         <div>
@@ -27,18 +27,20 @@
             <tab #tabDepartments="tab" heading="Departamentos">
               <aw-employee-departments />
             </tab>
-
             <tab #tabTasks="tab" heading="Tareas">
-              <aw-employee-tasks *ngIf="tabTasks.active" />
+              @if (tabTasks.active) {
+                <aw-employee-tasks />
+              }
             </tab>
-
             <tab #tabTimeControl="tab" heading="Control de tiempos">
-              <aw-employee-time-control *ngIf="tabTimeControl.active" />
+              @if (tabTimeControl.active) {
+                <aw-employee-time-control />
+              }
             </tab>
           </tabset>
         </div>
       </aw-card>
     </div>
-  </ng-container>
+  }
 </aw-view-base>
 <!-- end tabs -->
