--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -24,30 +24,28 @@
     Footer
   </button>
 
-  <ng-container *ngIf="getUserName()">
+  @if (getUserName()) {
     <div class="mt-3">
       User Id: <span class="text-success">{{ getUserId() }}</span>
     </div>
-
     <div>
       User name: <span class="text-success">{{ getUserName() }}</span>
     </div>
-
     <div>
       Company Id: <span class="text-success">{{ getCompanyId() }}</span>
     </div>
-
     <div class="mt-3">
       <h3>Roles</h3>
-      <ul *ngFor="let role of getRoles()">
-        <li>{{ role }}</li>
-      </ul>
+      @for (role of getRoles(); track role) {
+        <ul>
+          <li>{{ role }}</li>
+        </ul>
+      }
     </div>
-
     <div class="mt-3">
       <button (click)="handleLogOut()" class="btn btn-outline-danger">Log out</button>
     </div>
-  </ng-container>
+  }
 
   <div class="mt-2">
     <button (click)="handleChangeThemeColor()" class="btn btn-primary">Change theme color</button>
