--- a/src/app/views/time-control-records/time-control-record-edit/time-control-record-edit.component.html
+++ b/src/app/views/time-control-records/time-control-record-edit/time-control-record-edit.component.html
@@ -8,7 +8,7 @@
 
   <!-- body -->
   <div class="modal-body">
-    <ng-container *ngIf="timeControl">
+    @if (timeControl) {
       <form (ngSubmit)="handleSubmit()" [formGroup]="form">
         <!-- timeStart y timeFinish -->
         <div class="mb-2 d-flex">
@@ -20,9 +20,7 @@
               fieldName="dateStart"
               formControlName="dateStart"
               label="Inicio" />
-
             <div class="mt-3"></div>
-
             <aw-form-timepicker
               [badRequest]="badRequest"
               [form]="form"
@@ -31,7 +29,6 @@
               formControlName="timeStart"
               label="" />
           </div>
-
           <div class="ms-auto">
             <aw-form-datepicker
               [badRequest]="badRequest"
@@ -40,9 +37,7 @@
               fieldName="dateFinish"
               formControlName="dateFinish"
               label="Final" />
-
             <div class="mt-3"></div>
-
             <aw-form-timepicker
               [badRequest]="badRequest"
               [form]="form"
@@ -53,13 +48,11 @@
           </div>
           <!-- end timeStart y timeFinish -->
         </div>
-
         <!-- footer -->
         <div class="modal-footer">
           <button (click)="handleClose()" class="btn btn-secondary" data-bs-dismiss="modal" type="button">
             Cerrar
           </button>
-
           <aw-btn-loading
             [btnType]="btnType.submit"
             [loading]="loadingForm"
@@ -70,7 +63,7 @@
         </div>
         <!-- end footer -->
       </form>
-    </ng-container>
+    }
   </div>
   <!-- end body -->
 </div>
